--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
+    "@fastify/multipart": "^8.0.1",
     "@fastify/sensible": "~5.2.0",
+    "@fastify/static": "^7.0.4",
     "axios": "^1.6.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0"
