--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
+  "engines": {
+    "node": ">=20.12.0"
+  },
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/multipart": "^8.0.1",
@@ -27,7 +30,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
-    "@types/node": "~18.16.9",
+    "@types/node": "~22.9.0",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
